{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 24,
  "lineage": "f0c69912-274f-1130-2650-84fd9f6c0f4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:813176029441:route-table/rtb-09f39dfdc27e2f3c6",
            "id": "rtb-09f39dfdc27e2f3c6",
            "owner_id": "813176029441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pilot-phi-sandbox-rt-private",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "tags_all": {
              "Name": "pilot-phi-sandbox-rt-private",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dd1ddbbe71dc8be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07df90ed9f5182055",
            "route_table_id": "rtb-09f39dfdc27e2f3c6",
            "subnet_id": "subnet-08eff3c80889648f0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0928b294e0113a338",
            "route_table_id": "rtb-09f39dfdc27e2f3c6",
            "subnet_id": "subnet-027837ccaff142c02"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "no_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:813176029441:security-group/sg-004be55a6b972a47f",
            "description": "Security group with no ingress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004be55a6b972a47f",
            "ingress": [],
            "name": "pilot-phi-sandbox-sg-lockdown",
            "name_prefix": "",
            "owner_id": "813176029441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pilot-phi-sandbox-sg-lockdown",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "tags_all": {
              "Name": "pilot-phi-sandbox-sg-lockdown",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dd1ddbbe71dc8be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:813176029441:subnet/subnet-08eff3c80889648f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.50.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eff3c80889648f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "813176029441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pilot-phi-sandbox-private-0",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "tags_all": {
              "Name": "pilot-phi-sandbox-private-0",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "vpc_id": "vpc-01dd1ddbbe71dc8be"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:813176029441:subnet/subnet-027837ccaff142c02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027837ccaff142c02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "813176029441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pilot-phi-sandbox-private-1",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "tags_all": {
              "Name": "pilot-phi-sandbox-private-1",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "vpc_id": "vpc-01dd1ddbbe71dc8be"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:813176029441:vpc/vpc-01dd1ddbbe71dc8be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0caceff924a2163bb",
            "default_route_table_id": "rtb-01247805d95dad2c7",
            "default_security_group_id": "sg-054c5f19528aeab19",
            "dhcp_options_id": "dopt-09b119bd6fdfb7885",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01dd1ddbbe71dc8be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01247805d95dad2c7",
            "owner_id": "813176029441",
            "tags": {
              "Name": "pilot-phi-sandbox-vpc",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            },
            "tags_all": {
              "Name": "pilot-phi-sandbox-vpc",
              "env": "pilot",
              "scope": "phi-sandbox-boundary",
              "system": "zenthea"
            }
          }
        }
      ]
    }
  ]
}